@@ -3,6 +3,8 @@ mutter (3.32.0-1ubuntu2) UNRELEASED; urgency=medium
   * debian/patches/x11-Add-support-for-fractional-scaling-using-Randr.patch:
     - Don't invert the screen size when rotation is enabled (LP: #1822513)
     - Remove unneeded cleanup changes
+    - Update screen size only after monitors modes have been derived
+      (LP: #1822616)
 
  -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 03 Apr 2019 19:19:59 -0400
 
